# asw

./: .agent.md  .gitignore  AGENT.md  CODEOWNERS  LICENSE  README.md  agent.md  pyproject.toml  repro_bug.py  requirements.txt
$tmpdir/.company/roles/: role_writer.md  vpe.md
$tmpdir/.company/standards/: python_guidelines.md
$tmpdir/.company/templates/: execution_plan_template.md  prd_template.md
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: copilot-instructions.md
.github/agents/: pr-finalization.agent.md  user-docs.agent.md
.github/instructions/: python-standards.instructions.md
docs/branches/: INFRA-001.md
docs/branches/ASW-CORE-001/: intent.md  research.md  vision.md
docs/branches/ASW-CORE-002/: CHANGE-LOG.md  design.md
docs/branches/ASW-CORE-003/: CHANGE-LOG.md  (+1 more)
docs/user/: README.md
scripts/: check-all.sh  format-python.sh  lint-markdown.sh  lint-python.sh  lint-ruff.sh  test_company.sh
src/asw/: __init__.py  company.py  core_roles.py  execution_plan.py  founder_questions.py  gates.py  git.py  hiring.py  orchestrator.py  phase_implementation.py  phase_preparation.py  phase_tasks.py  pipeline.py  test_company_runner.py  validation_contract.py  validation_runner.py
tests/: test_cli.py  test_company.py  test_execution_plan.py  test_gates.py  test_gemini.py  test_git.py  test_hiring.py  test_linters.py  test_logging.py  test_orchestrator.py  test_phase_implementation.py  test_phase_preparation.py  test_phase_tasks.py  test_questions.py  test_test_company_runner.py  test_validation_contract.py  test_validation_runner.py  test_vision.md
(+33 files in other folders)
