[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "asw"
version = "0.1.0"
description = "The Agentic Software Organization"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
